--- a/src/pages/inicio-sesion.astro
+++ b/src/pages/inicio-sesion.astro
@@ -9,7 +9,7 @@ import Layout from '../layouts/Layout-registro.astro';
         <div id="blur"></div>
         <a id="cerrar" href="/index.html"><img id="x" src="Imagenes/Registro/x.svg"></a>
         <header>
-            <h1>Entra en Astrae</h1>
+            <h1>Inicia Sesión</h1>
             <p id="subtexto-principal">Si ya has accedido a Astrae, puedes entrar con <br>tu email o iniciando sesión con tu cuenta de Google</p>
         </header>
         <form id="loginForm">
